removing google guava use