@@ -12,7 +12,7 @@
  */
 package com.davidehringer.atlassian.bamboo.maven;
 
-import static com.davidehringer.atlassian.bamboo.maven.TaskConfiguration.*;
+import static com.davidehringer.atlassian.bamboo.maven.TaskConfiguration.CUSTOM_ELEMENT;
 import static com.davidehringer.atlassian.bamboo.maven.TaskConfiguration.CUSTOM_VARIABLE_NAME;
 import static com.davidehringer.atlassian.bamboo.maven.TaskConfiguration.EXTRACT_MODE;
 import static com.davidehringer.atlassian.bamboo.maven.TaskConfiguration.EXTRACT_MODE_CUSTOM;
@@ -22,11 +22,13 @@ import static com.davidehringer.atlassian.bamboo.maven.TaskConfiguration.PREFIX_
 import static com.davidehringer.atlassian.bamboo.maven.TaskConfiguration.PREFIX_OPTION_CUSTOM_VALUE;
 import static com.davidehringer.atlassian.bamboo.maven.TaskConfiguration.PREFIX_OPTION_DEFAULT;
 import static com.davidehringer.atlassian.bamboo.maven.TaskConfiguration.PROJECT_FILE;
+import static com.davidehringer.atlassian.bamboo.maven.TaskConfiguration.STRIP_SNAPSHOT;
 import static com.davidehringer.atlassian.bamboo.maven.TaskConfiguration.VARIABLE_TYPE;
 import static com.davidehringer.atlassian.bamboo.maven.TaskConfiguration.VARIABLE_TYPE_JOB;
 import static com.davidehringer.atlassian.bamboo.maven.TaskConfiguration.VARIABLE_TYPE_PLAN;
 import static com.davidehringer.atlassian.bamboo.maven.TaskConfiguration.VARIABLE_TYPE_RESULT;
 
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -41,8 +43,6 @@ import com.atlassian.bamboo.task.AbstractTaskConfigurator;
 import com.atlassian.bamboo.task.TaskConfiguratorHelper;
 import com.atlassian.bamboo.task.TaskDefinition;
 import com.atlassian.bamboo.utils.error.ErrorCollection;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Maps;
 import com.atlassian.struts.TextProvider;
 
 /**
@@ -52,8 +52,8 @@ public class MavenVariableTaskConfigurator extends AbstractTaskConfigurator {
 
     private static final Log LOG = LogFactory.getLog(MavenVariableTaskConfigurator.class);
 
-    private static final List<String> FIELDS_TO_COPY = ImmutableList.of(PROJECT_FILE, EXTRACT_MODE, VARIABLE_TYPE,
-        PREFIX_OPTION, PREFIX_OPTION_CUSTOM_VALUE, CUSTOM_VARIABLE_NAME, CUSTOM_ELEMENT, STRIP_SNAPSHOT);
+    private static final List<String> FIELDS_TO_COPY = List.of(PROJECT_FILE, EXTRACT_MODE, VARIABLE_TYPE, PREFIX_OPTION,
+        PREFIX_OPTION_CUSTOM_VALUE, CUSTOM_VARIABLE_NAME, CUSTOM_ELEMENT, STRIP_SNAPSHOT);
 
     private TextProvider textProvider;
 
@@ -90,17 +90,17 @@ public class MavenVariableTaskConfigurator extends AbstractTaskConfigurator {
     }
 
     private void populateContextForAll(@NotNull final Map<String, Object> context) {
-        Map<String, String> servers = Maps.newHashMap();
+        Map<String, String> servers = new HashMap<>();
         servers.put(EXTRACT_MODE_CUSTOM, textProvider.getText("maven.extractor.config.option.extract.custom"));
         servers.put(EXTRACT_MODE_GAV, textProvider.getText("maven.extractor.config.option.extract.gav"));
         context.put("options", servers);
 
-        Map<String, String> prefixOptions = Maps.newHashMap();
+        Map<String, String> prefixOptions = new HashMap<>();
         prefixOptions.put(PREFIX_OPTION_DEFAULT, textProvider.getText("maven.extractor.config.option.prefix.maven"));
         prefixOptions.put(PREFIX_OPTION_CUSTOM, textProvider.getText("maven.extractor.config.option.prefix.custom"));
         context.put("prefixOptions", prefixOptions);
 
-        Map<String, String> variableTypeOptions = Maps.newHashMap();
+        Map<String, String> variableTypeOptions = new HashMap<>();
         variableTypeOptions.put(VARIABLE_TYPE_JOB,
             textProvider.getText("maven.extractor.config.option.variableType.job"));
         variableTypeOptions.put(VARIABLE_TYPE_RESULT,
